K1J-405: Java21, gradle8.10.2, springboot-bom 3.3.4, camel 4.8.0, and analysis of tests failing after migration. To be continued after spring security. WIP